--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="make articles out of order but display normal"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Cbsama Ui</title><link rel="icon" type="image/x-icon" href="https://cdn-std.dprcdn.net/files/acc_649651/LUKiMl"><script src="https://gw.alipayobjects.com/os/lib/react/16.8.6/umd/react.production.min.js"></script><script src="https://gw.alipayobjects.com/os/lib/react-dom/16.8.6/umd/react-dom.production.min.js"></script><link href="/cbsama-ui/static/css/vendors.0b2e8ee37d74ac00edd7.css" rel="stylesheet"></head><body><div id="root"></div><script src="/cbsama-ui/static/js/vendors.4d2c69f2.js"></script><script src="/cbsama-ui/static/js/app.0b2e8ee37d74ac00edd7.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+    />
+    <link rel="manifest" href="/asset-manifest.json" />
+    <style>
+      a[title="站长统计"] {
+        display: none;
+      }
+    </style>
+    <link rel="stylesheet" href="/umi.cbe8c116.css" />
+    <script>
+      window.routerBase = "/";
+    </script>
+    <script>
+      //! umi version: 3.0.18
+    </script>
+    <script src="https://v1.cnzz.com/z_stat.php?id=1278602214&amp;web_id=1278602214"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+
+    <script src="/umi.ca376960.js"></script>
+  </body>
+</html>
