Aledenn published a site update

--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="manifest" href="/asset-manifest.json" />
     <style>
       a[title="站长统计"] {
         display: none;
       }
     </style>
-    <link rel="stylesheet" href="/umi.cbe8c116.css" />
+    <style>
+      .demo_css .dot {
+        height: 1em !important;
+        width: 1em !important;
+      }
+    </style>
+    <link rel="stylesheet" href="/cbsama-ui/umi.cbe8c116.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/cbsama-ui/";
     </script>
     <script>
       //! umi version: 3.0.18
     </script>
-    <script src="https://v1.cnzz.com/z_stat.php?id=1278602214&amp;web_id=1278602214"></script>
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="/umi.ca376960.js"></script>
+    <script src="/cbsama-ui/umi.38014b5e.js"></script>
   </body>
 </html>
